--- a/src/Sidus/EAVDemoBundle/Resources/views/layout.html.twig
+++ b/src/Sidus/EAVDemoBundle/Resources/views/layout.html.twig
@@ -1,6 +1,7 @@
-<!DOCTYPE html>{% import "@SidusEAVDemo/Macros/utilities.html.twig" as utilities %}
+<!DOCTYPE html>
 <html lang="{{ app.request.locale }}">
 <head>
+    {% import "@SidusEAVDemo/Macros/utilities.html.twig" as utilities %}
     <meta charset="{{ _charset }}">
     <title>{% block title %}Sidus{{ title is defined ? ' - ' ~ title }}{% endblock %}</title>
     {% block metas %}
@@ -16,17 +17,42 @@
     {% endblock %}
 </head>
 <body>
-<div class="container">
-    {% block main_container %}
-        {% block main_menu %}
-
-        {% endblock %}
+{% block main_menu %}
+    <nav class="navbar navbar-default navbar-static-top">
         <div class="container-fluid">
-            {{ utilities.flash_messages() }}
-            {% block main_content %}{% endblock %}
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="{{ path('sidus_eavdemo.dashboard') }}">Sidus</a>
+            </div>
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    {{ utilities.menu_link('Entités', 'sidus_eavdemo.data.index') }}
+
+                </ul>
+            </div>
         </div>
-    {% endblock %}
-</div>
+    </nav>
+{% endblock %}
+{% block main_container %}
+    <div class="container-fluid">
+        {{ utilities.flash_messages() }}
+        {% block main_content %}
+            <div class="row">
+                <div class="col-lg-2 col-md-3 col-sm-4">
+                    {% block left_menu %}{% endblock %}
+                </div>
+                <div class="col-lg-10 col-md-9 col-sm-8">
+                    {% block middle_content %}{% endblock %}
+                </div>
+            </div>
+        {% endblock %}
+    </div>
+{% endblock %}
 
 {% block javascripts %}
     {% javascripts
