--- a/src/Sidus/EAVDemoBundle/Resources/views/Data/list.html.twig
+++ b/src/Sidus/EAVDemoBundle/Resources/views/Data/list.html.twig
@@ -1,6 +1,7 @@
 {% extends 'SidusEAVDemoBundle:Data:index.html.twig' %}
 
 {% block middle_content %}
+    {% form_theme form 'SidusEAVDemoBundle:Data:form_theme.html.twig' %}
     {{ form_start(form) }}
         {{ form_widget(form.filters) }}
         <table class="table table-striped">
@@ -8,6 +9,7 @@
             <thead>
                 <tr>
                     <th>#{{ form_widget(form.sortable.id) }}</th>
+                    <th>Code{{ form_widget(form.sortable['value.code']) }}</th>
                     <th>Family{{ form_widget(form.sortable.familyCode) }}</th>
                     <th>{{ family.attributeAsLabel }}{{ form_widget(form.sortable['value.' ~ family.attributeAsLabel.code]) }}</th>
                     <th>Created{{ form_widget(form.sortable.createdAt) }}</th>
@@ -18,6 +20,7 @@
                 {% for data in datas %}
                     <tr>
                         <td>{{ data.id }}</td>
+                        <td>{{ data.code }}</td>
                         <td>{{ data.family }}</td>
                         <td>{{ data }}</td>
                         <td>{{ data.createdAt | date() }}</td>
