--- a/src/Sidus/EAVDemoBundle/Resources/sass/_bootstrap.scss
+++ b/src/Sidus/EAVDemoBundle/Resources/sass/_bootstrap.scss
@@ -1,13 +1,5 @@
 @import "partials/variables";
 
-// Main bootstrap.sass entry point
-@import "mopabootstrap/bootstrap-sass/assets/stylesheets/bootstrap";
-
-// The Paginator less for MopaBootstrapBundle
-@import "mopabootstrap/sass/paginator.scss";
-
-// Collection support for MopaBootstrapBundle
-@import "mopabootstrap/sass/collections.scss";
-
-// FormFlow support for MopaBootstrapBundle
-@import "mopabootstrap/sass/form_flow.scss";
+@import "mopabootstrap/sass/mopabootstrapbundle-3.2";
+@import "mopabootstrap/sass/font-awesome/font-awesome";
+@import "mopabootstrap/bootstrap-sass/assets/stylesheets/bootstrap-compass";
