--- a/src/Sidus/EAVDemoBundle/Resources/sass/_common.scss
+++ b/src/Sidus/EAVDemoBundle/Resources/sass/_common.scss
@@ -1,5 +1,5 @@
 // Font Awesome icon support
-@import "mopabootstrap/sass/font-awesome/font-awesome.scss";
+@import "mopabootstrap/sass/font-awesome/font-awesome";
 
 @import "compass/css3/transition";
 
