--- a/src/Sidus/EAVDemoBundle/Resources/views/Data/list.html.twig
+++ b/src/Sidus/EAVDemoBundle/Resources/views/Data/list.html.twig
@@ -9,9 +9,9 @@
             <thead>
                 <tr>
                     <th>#{{ form_widget(form.sortable.id) }}</th>
-                    <th>Code{{ form_widget(form.sortable['value.code']) }}</th>
+                    <th>Code{{ form_widget(form.sortable.code) }}</th>
                     <th>Family{{ form_widget(form.sortable.familyCode) }}</th>
-                    <th>{{ family.attributeAsLabel }}{{ form_widget(form.sortable['value.' ~ family.attributeAsLabel.code]) }}</th>
+                    <th>{{ family.attributeAsLabel }}{{ form_widget(form.sortable[family.attributeAsLabel.code]) }}</th>
                     <th>Created{{ form_widget(form.sortable.createdAt) }}</th>
                     <th>Actions</th>
                 </tr>
