Update eavmodelbundle + adding support for multiple autocomplete and datetime pickers

--- a/src/Sidus/EAVDemoBundle/Resources/views/layout.html.twig
+++ b/src/Sidus/EAVDemoBundle/Resources/views/layout.html.twig
@@ -10,10 +10,11 @@
         <meta name="author" content="Vincent Chalnot">
     {% endblock %}
     {% block stylesheets %}
-        {% stylesheets  'bundles/siduseavdemo/css/sidus.css'
-                        'bundles/pinanoselect2/css/select2.css'
+        {% stylesheets  'bundles/pinanoselect2/css/select2.css'
                         'bundles/pinanoselect2/css/select2-bootstrap.css'
                         'bundles/samsonautocomplete/css/autocomplete.css'
+                        'bundles/mopabootstrap/components/smalot-bootstrap-datetimepicker/css/bootstrap-datetimepicker.min.css'
+                        'bundles/siduseavdemo/css/sidus.css'
                 filter='?uglifycss' filter='cssrewrite' %}
             <link href="{{ asset_url }}" type="text/css" rel="stylesheet" media="screen" />
         {% endstylesheets %}
@@ -74,6 +75,8 @@
             '@MopaBootstrapBundle/Resources/public/components/smalot-bootstrap-datetimepicker/js/bootstrap-datetimepicker.js'
             '@MopaBootstrapBundle/Resources/public/components/smalot-bootstrap-datetimepicker/js/locales/bootstrap-datetimepicker.fr.js'
             '@SidusEAVModelBundle/Resources/public/js/bootstrap.collection.js'
+            '@SidusEAVModelBundle/Resources/public/js/sortable.collection.js'
+            '@SidusEAVModelBundle/Resources/public/js/datetime.picker.js'
             '@PinanoSelect2Bundle/Resources/public/js/select2.min.js'
             '@PinanoSelect2Bundle/Resources/public/js/select2_locale_fr.js'
             '@SamsonAutocompleteBundle/Resources/public/js/autocomplete.js'
@@ -83,23 +86,12 @@
     {% endjavascripts %}
     {{ tinymce_init() }}
     <script>
-        RegExp.escape= function(s) {
-            return s.replace(/[-\/\\^$*+?.()|[\]{}]/g, '\\$&');
-        };
         $(document).ready(function() {
-            /* Initialize bootstrap collection sortable */
-            $('.bootstrap-collection').sortable({
-                update: function () {
-                    var pattern = $(this).data('input-pattern');
-                    var regex = new RegExp(RegExp.escape(pattern).replace('__name__', '\\d+'));
-                    $(this).find(':input').each(function (idx) {
-                        var newName = $(this).attr('name').replace(regex, pattern.replace('__name__', idx));
-                        $(this).attr('name', newName);
-                    });
-                }
-            });
+            $('.select2').samsonSelect2();
 
-            $(".select2").samsonSelect2();
+            $(document).on('collection.item.added', function(e, o){
+                $(o).find('.select2').samsonSelect2();
+            });
         });
     </script>
 {% endblock %}
